--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -26,9 +26,9 @@
                             HideDetails="@("auto")"
                             Outlined
                             Counter="@MaxLength"
-                            maxlength="@MaxLength"
-                            spellcheck="false"
-                            Placeholder="@Placeholder">
+                                            maxlength="@MaxLength"
+                                            spellcheck="false"
+                            Placeholder="@(I18n.T("Please input a password"))">
                 </MTextField>
                 <MTextField @bind-Value="model.PasswordConfirmation"
                             Dense
@@ -36,7 +36,7 @@
                             Counter="@MaxLength"
                                             maxlength="@MaxLength"
                                             spellcheck="false"
-                            Placeholder="@Placeholder">
+                            Placeholder="@(I18n.T("Please enter the password again"))">
                 </MTextField>
 
                 </MCardText>
