🐛 fix: fixed some bugs

--- a/SwashbucklerDiary/Pages/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/AchievementPage.razor
@@ -5,7 +5,7 @@
     <BetaTooltip></BetaTooltip>
 </MyAppBar>
 
-<MContainer>
+<ScrollContainer>
     <div class="d-flex justify-space-between flex-wrap">
         @foreach (var item in Achievements)
         {
@@ -44,4 +44,4 @@
             </MCard>
         }
     </div>
-</MContainer>
+</ScrollContainer>
