🆕 feat(BackupsPage): add BackupsPage

--- a/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
+++ b/SwashbucklerDiary/Components/Swiper/SwiperTabItems.razor
@@ -6,7 +6,6 @@
     </div>
 </div>
 <div class="justify-center" style="@($"padding-top:30vh;{(Show?"display:none;":"display:flex;")}")">
-    <MProgressCircular Indeterminate
-                       Size="48"></MProgressCircular>
+    <MProgressCircular Indeterminate Size="48"></MProgressCircular>
 </div>
 <link href="npm/swiper/7.4.1/swiper-bundle.min.css" rel="stylesheet" />
