🐛 fix: Fix the slow loading of the avatar

--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -23,7 +23,8 @@
             <MList>
                 <MListItem ThreeLine>
                     <MListItemAvatar Class="ml-md-2" Rounded="@("lg")" Size="70">
-                        <MImage Src="@(Avatar)"></MImage>
+                        <MImage Src="@(Avatar)">
+                        </MImage>
                     </MListItemAvatar>
                     <MListItemContent>
                         <MListItemTitle Class="text-h6 font-weight-bold">
