♻️ refactor: Refactor diary location

--- a/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
@@ -1,4 +1,5 @@
-﻿@inherits DialogComponentBase
+﻿@namespace SwashbucklerDiary.Components
+@inherits DialogComponentBase
 
 <MyDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
