--- a/SwashbucklerDiary/Components/LocationListItem.razor
+++ b/SwashbucklerDiary/Components/LocationListItem.razor
@@ -1,6 +1,11 @@
 ﻿@inherits MyComponentBase
 
 <MListItem>
+    <MListItemIcon>
+        <MIcon Class="list-item-icon">
+            mdi-map-marker-outline
+        </MIcon>
+    </MListItemIcon>
     <MListItemContent>
         <MListItemTitle>
             @(Value?.Name)
