--- a/SwashbucklerDiary/Components/MultiDisplay.razor
+++ b/SwashbucklerDiary/Components/MultiDisplay.razor
@@ -1,4 +1,4 @@
-﻿@if (MasaBlazor.Breakpoint.SmAndUp)
+﻿@if (Tablet ? MasaBlazor.Breakpoint.MdAndUp: MasaBlazor.Breakpoint.SmAndUp)
 {
     @DesktopContent
 }
