--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -19,38 +19,17 @@
         </MIcon>
     </MButton>
 
-    <MyMenu @bind-MyValue="ShowMenu"
-            Rounded="@("lg")"
-            Transition="scroll-x-reverse-transition">
-        <ActivatorContent>
-            <MButton Icon
-                     @attributes="@context.Attrs">
-                <MultiDisplay>
-                    <DesktopContent>
-                        <MIcon>mdi-dots-horizontal</MIcon>
-                    </DesktopContent>
-                    <MobileContent>
-                        <MIcon>mdi-dots-vertical</MIcon>
-                    </MobileContent>
-                </MultiDisplay>
-            </MButton>
-        </ActivatorContent>
-
-        <ChildContent>
-            <MList MinWidth="150">
-                <MListItem Dense
-                           OnClick="ShowTitleChanged">
-                    <MListItemContent>
-                        @(ShowTitle ? I18n.T("Write.CloseTitle") : I18n.T("Write.OpenTitle"))
-                    </MListItemContent>
-                </MListItem>
-                <MListItem Dense OnClick="()=>MarkdownChanged()">
-                    <MListItemContent>
-                        @(Markdown ? I18n.T("Diary.Text") : I18n.T("Diary.Markdown"))
-                    </MListItemContent>
-                </MListItem>
-            </MList>
-        </ChildContent>
+    <MyMenu @bind-Value="ShowMenu" ViewListItems="ViewListItems">
+        <ButtonContent>
+            <MultiDisplay>
+                <DesktopContent>
+                    <MIcon>mdi-dots-horizontal</MIcon>
+                </DesktopContent>
+                <MobileContent>
+                    <MIcon>mdi-dots-vertical</MIcon>
+                </MobileContent>
+            </MultiDisplay>
+        </ButtonContent>
     </MyMenu>
 </MAppBar>
 
