💄 style:  Dialog Card using lg of Rounded

--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -8,7 +8,7 @@
           MyValueChanged="InternalValueChanged"
           MaxWidth="420">
     <MForm @ref="@form" Model="@model" OnValidSubmit="HandleOnOK" EnableValidation EnableI18n>
-        <MCard>
+        <MCard Rounded="@("lg")">
             <MCardTitle>
                 @(Title)
                 <MSpacer>
