--- a/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
@@ -5,7 +5,7 @@
           MyValueChanged="InternalValueChanged"
           MaxWidth="420"
           Scrollable>
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Tag.Select"))
             <MSpacer></MSpacer>
