--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -65,7 +65,7 @@
 
 <MyDialog @bind-MyValue="ShowSourceCode"
           MaxWidth="420">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("About.SourceCode"))
             <MSpacer></MSpacer>
