--- a/SwashbucklerDiary/Pages/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/BackupsPage.razor
@@ -68,7 +68,7 @@
 </SwiperTabItems>
 
 <MyDialog @bind-MyValue="ShowBackups" MaxWidth="420">
-    <MCard MaxWidth="420">
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Backups.Local"))
             <MSpacer></MSpacer>
