--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -117,7 +117,7 @@
 
 <MyDialog MaxWidth="420"
           @bind-MyValue="ShowLanguage">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Mine.SelectLanguage"))
             <MSpacer></MSpacer>
@@ -146,7 +146,7 @@
 
 <MyDialog MaxWidth="420"
           @bind-MyValue="ShowFeedback">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Mine.ContactWay"))
             <MSpacer></MSpacer>
