--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -131,7 +131,7 @@
 </ScrollContainer>
 
 <MyDialog @bind-MyValue="ShowShare" MaxWidth="420">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Read.SelectShare"))
             <MSpacer></MSpacer>
