--- a/SwashbucklerDiary/Pages/UserPage.razor
+++ b/SwashbucklerDiary/Pages/UserPage.razor
@@ -84,7 +84,7 @@
 
 <MyDialog MaxWidth="420"
           @bind-MyValue="ShowAvatar">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("User.EditAvatar"))
             <MSpacer></MSpacer>
