--- a/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/InputDialog.razor
@@ -4,7 +4,7 @@
 <MyDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
           MaxWidth="420">
-    <MCard>
+    <MCard Rounded="@("lg")">
         <MCardTitle>
             @Title
             <MSpacer></MSpacer>
