--- a/SwashbucklerDiary/Components/MyMenu.razor
+++ b/SwashbucklerDiary/Components/MyMenu.razor
@@ -30,7 +30,8 @@
                         }
                     }
                     <MListItem>
-                        <MButton Rounded Block Depressed Large
+                        <MButton Rounded Block Depressed Large 
+                                 Ripple="false"
                                  Class="text-subtitle-1"
                                  OnClick="HandleOnCancel">
                             @(I18n.T("Share.Cancel"))
