♻️ refactor: Optimize sidebar display

--- a/SwashbucklerDiary/Components/DialogComponents/SponsorDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SponsorDialog.razor
@@ -67,9 +67,8 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText>
-            <div class="mb-1">@(I18n.T("Amount.ThankContent"))</div>
-            <div>@(I18n.T("Amount.ThankContent2"))</div>
+        <MCardText Style="white-space:pre-line;">
+            @(I18n.T("Amount.ThankContent"))
         </MCardText>
     </MCard>
 </MyDialog>
